<resources>
    <string name="app_name">Que-snitch</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="date_picker_title">Date Of Crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_report">%1$s The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved!</string>
    <string name="crime_report_unsolved">The case is not solved!</string>
    <string name="crime_report_no_suspect">There is no suspect!</string>
    <string name="crime_report_suspect">The suspect is %s!</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Select An App To Send All Of Your Porn&#8230;</string>
    <string name="send_crime_report_button">SEND CRIME REPORT</string>
    <string name="choose_suspect_button">CHOOSE SUSPECT</string>

</resources>
